--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="og:title" content="expice">
-    <meta name="og:description" content="Це мій сайт який я зробив після невеличкої перерви. Може показатись ніби це погано але ні адже я добавив адаптивний текст та обновив сборщік так шо сайт должен бить лучше но він тварь 60-70 балов на гуглпейджі вибиває мразь кончяна уроди">
-    <meta name="og:url" content="https://luteet.github.io/expice/">
-    <meta name="og:site_name" content="expice">
-    <meta name="og:locale" content="ru_RU">
-    <meta name="og:image" content="https://luteet.github.io/expice/img/meta-img/intro.jpg">
-    <meta name="og:type" content="website">
+    <meta property="og:title" content="expice">
+    <meta property="og:description" content="Це мій сайт який я зробив після невеличкої перерви. Може показатись ніби це погано але ні адже я добавив адаптивний текст та обновив сборщік так шо сайт должен бить лучше но він тварь 60-70 балов на гуглпейджі вибиває мразь кончяна уроди">
+    <meta property="og:url" content="https://luteet.github.io/expice/">
+    <meta property="og:site_name" content="expice">
+    <meta property="og:locale" content="ru_RU">
+    <meta property="og:image" content="https://luteet.github.io/expice/img/meta-img/intro.jpg">
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="640" />
+    <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
